// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LongOperationIndicator (snapshot) > renders at ~5s elapsed (not slow) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--think-accent, #D97757);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 20px; height: 20px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <svg
          aria-hidden="true"
          class="claude-asterisk claude-asterisk--active"
          data-claude-asterisk="active"
          height="20"
          style="display: inline-block; flex-shrink: 0; color: var(--think-accent, #D97757);"
          viewBox="0 0 40 40"
          width="20"
        >
          <g
            fill="currentColor"
          >
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(0 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(45 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(90 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(135 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(180 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(225 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(270 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(315 20 20)"
            />
            <circle
              cx="20"
              cy="20"
              r="3.1"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-muted-foreground"
    >
      5
      s
    </span>
  </div>
</div>
`;

exports[`LongOperationIndicator (snapshot) > renders at ~35s elapsed (slow state) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--think-accent, #D97757);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 20px; height: 20px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <svg
          aria-hidden="true"
          class="claude-asterisk claude-asterisk--active"
          data-claude-asterisk="active"
          height="20"
          style="display: inline-block; flex-shrink: 0; color: var(--think-accent, #D97757);"
          viewBox="0 0 40 40"
          width="20"
        >
          <g
            fill="currentColor"
          >
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(0 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(45 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(90 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(135 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(180 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(225 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(270 20 20)"
            />
            <path
              d="M20 3.2c1.9 0 3.4 1.5 3.4 3.4l-1.1 10.6c-.1 1.2-1.1 2.1-2.3 2.1s-2.2-.9-2.3-2.1L16.6 6.6c0-1.9 1.5-3.4 3.4-3.4z"
              transform="rotate(315 20 20)"
            />
            <circle
              cx="20"
              cy="20"
              r="3.1"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-amber-600"
    >
      35
      s
       · está tardando más de lo habitual
    </span>
  </div>
</div>
`;
